--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -110,6 +110,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(catsplosion catsplosion.cpp)
     DFHACK_PLUGIN(regrass regrass.cpp)
     DFHACK_PLUGIN(forceequip forceequip.cpp)
+    DFHACK_PLUGIN(moveunits moveunits.cpp)
     # this one exports functions to lua
     DFHACK_PLUGIN(burrows burrows.cpp LINK_LIBRARIES lua)
     DFHACK_PLUGIN(sort sort.cpp LINK_LIBRARIES lua)
